@@ -3,8 +3,9 @@
 * Changed date/time inputs to default to nil instead of Time.now when the object has no value (due to deprecation warning, #240)
 * Changed the behaviour of associations with a :class_name option to be more consistent with what Rails expects
 * Fixed issues with Ruby 1.9.1 and Haml
-* Add the :disabled option to check_boxes input
 * Fixed inputs_for_nested_attributes only appending to the output buffer
+* Add the :disabled option to check_boxes input
+* Changed I18n handling in spec tests to use I18n.backend.reload! instead of assigning nil
 
 0.9.8
 
